add gradle build